# layer-2

./: Cargo.toml  Makefile  README.md  docker-compose.yml
.github/workflows/: Build.yml  Push.yml
chat-evo1/: API.md  Cargo.toml
chat-evo1/src/: lib.rs  main.rs
chat-evo1/src/db/: models.rs
chat-evo1/src/db/functions/: create_pool.rs  fetch_room_without_staff.rs  get_messages.rs  get_pool_invitations.rs  get_room_invitations.rs  get_staff_rooms.rs  get_user_rooms.rs  invite_pool_to_room.rs  join_pool.rs  join_room.rs  mod.rs  put_room.rs  put_topic.rs  save_message.rs
chat-evo1/src/http/routes/: index.rs
chat-evo1/src/jcr/: models.rs
chat-evo1/src/ws/: mod.rs  models.rs  server.rs  session.rs
download-app/: API.md  Cargo.toml
download-app/src/: main.rs
download-app/src/db/: models.rs
download-app/src/db/functions/: download.rs  get_download_link.rs  mod.rs
download-app/src/http/routes/: index.rs  mod.rs
download-app/src/jcr/: models.rs
email-app/: API.md  Cargo.toml
email-app/src/: lib.rs  main.rs
email-app/src/db/: mail_sender.rs  mod.rs  models.rs
email-app/src/db/functions/: mod.rs  send_receipt.rs
email-app/src/http/: models.rs
email-app/src/http/routes/: index.rs
email-app/src/jcr/: models.rs
payment-app/: API.md  Cargo.toml
payment-app/src/: main.rs
payment-app/src/db/: models.rs
payment-app/src/db/functions/: core.rs  generate_file.rs  get_required_account.rs  handle_stripe.rs  mod.rs  put_account.rs  put_company.rs  put_intent.rs
payment-app/src/http/routes/: index.rs
payment-app/src/jcr/: models.rs
pdf-app/: API.md  Cargo.toml  README.md
pdf-app/src/: lib.rs  main.rs
pdf-app/src/http/routes/: index.rs
pdf-app/src/jcr/: models.rs
pdf-app/src/service/functions/: generate.rs  mod.rs
product-processor-app/: API.md  Cargo.toml
product-processor-app/src/: main.rs
product-processor-app/src/db/: models.rs
product-processor-app/src/db/functions/: download_file.rs  get_progress.rs  mod.rs  save_file.rs
product-processor-app/src/http/routes/: index.rs
product-processor-app/src/jcr/: models.rs
service-common/: Cargo.toml
service-common/src/: http.rs  jcr.rs  lib.rs  models.rs  utils.rs
service-common/src/config/: mod.rs  models.rs  service_config.rs  utils.rs
service-common/src/jwt/: jcr.rs  jwt.rs  mod.rs  models.rs  statics.rs
upload-app/: API.md  Cargo.toml
upload-app/src/: main.rs
upload-app/src/db/: models.rs
upload-app/src/db/functions/: get_upload_link.rs  mod.rs  upload.rs
upload-app/src/http/: mod.rs
upload-app/src/http/routes/: index.rs
upload-app/src/jcr/: models.rs
user-app/: API.md  Cargo.toml
user-app/src/: main.rs
user-app/src/db/: models.rs
user-app/src/db/functions/: generate_upload_link.rs  login.rs  mod.rs  register.rs  update_user.rs
user-app/src/http/: models.rs
user-app/src/http/routes/: index.rs
user-app/src/jcr/: models.rs
