[package]
name = "chat-evo1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
reqwest = { workspace = true }
serde_json = "1"
anyhow = "1"
actix = "0.13.0"
actix-files = "0.6.2"
actix-web = { workspace = true }
actix-web-actors = "4.2.0"
service-common = { path = "../service-common" }
chrono = { version = "0.4.28", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
tokio = { version = "1.32.0", features = ["full"] }

