[package]
name = "download-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
anyhow = "1"
actix-web = { workspace = true }
chrono = "0.4"
service-common = { path = "../service-common" }
reqwest = { workspace = true }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
actix-multipart = "0.6.0"
futures-util = "0.3.28"
actix-files = "0.6.2"
