[package]
name = "email-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
anyhow = "1"
actix-web = { workspace = true }
chrono = "0.4"
service-common = { path = "../service-common" }
reqwest = { workspace = true }
sparkpost = "0.5.4"
lettre = { version = "0.10.4", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }
async-trait = "0.1.73"
tera = "1.19.0"
