[package]
name = "payment-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { workspace = true }
anyhow = "1.0.72"
#async-stripe = { version = "0.22.2", features = ["runtime-tokio-hyper-rustls"] }
async-stripe = { version = "0.23.0", default-features = false, features = ["runtime-tokio-hyper-rustls", "billing"] }
chrono = "0.4.26"
dotenv = "0.15.0"
hex = "0.4.3"
hmac = "0.12.1"
reqwest = { workspace = true, features = ["stream"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
service-common = { path = "../service-common" }
sha2 = "0.10.7"

