[package]
name = "product-processor-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
anyhow = "1"
actix-web = { workspace = true }
chrono = "0.4"
service-common = { path = "../service-common" }
reqwest = { workspace = true , features = ["multipart"] }
rand = "0.8.5"
actix-multipart = "0.6.0"
uuid = { version = "1.4.1", features = ["v4"] }
futures-util = "0.3.28"
tokio-util = { version = "0.7.8", features = ["codec"] }
futures-core = "0.3.28"
tokio-stream = "0.1"
