[package]
name = "service-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1"
anyhow = "1"
actix-web = { workspace = true }
chrono = "0.4"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
reqwest = { workspace = true }
base64 = "0.21.2"
chacha20poly1305 = "0.10.1"
ed25519-compact = "2.0.4"
random-string = "1.0.0"
lazy_static = "1.4.0"
